# Add source files for the library

INCLUDE_DIRECTORIES(rpc api usb)

FILE(GLOB LIB_SOURCE_FILES 
  "rpc/*.cpp"
  "api/*.cc"
  )

FILE(GLOB LIB_HEADER_FILES
  "rpc/*.h"
  "usb/*.h"
  "api/*.h"
  )

SET(LIB_SOURCES ${LIB_SOURCE_FILES} ${LIB_HEADER_FILES})

IF(USE_FTD2XX)
  FILE(GLOB SOURCE_FILES_FTDI "usb/USBInterface.libftd2xx.cc")
ELSE(USE_FTD2XX)
  FILE(GLOB SOURCE_FILES_FTDI "usb/USBInterface.libftdi.cc")
ENDIF(USE_FTD2XX)
SET(LIB_SOURCES ${LIB_SOURCES} ${SOURCE_FILES_FTDI})

ADD_LIBRARY( ${PROJECT_NAME} SHARED ${LIB_SOURCES} )

IF(USE_FTD2XX)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FTD2XX_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${LIBUSB_1_LIBRARIES})
ELSE(USE_FTD2XX)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FTDI_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${LIBUSB_1_LIBRARIES})
ENDIF(USE_FTD2XX)
# We don't do any python binding yet!
#SET_SOURCE_FILES_PROPERTIES(api/libpxar.i PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(apilibpxar.i PROPERTIES SWIG_FLAGS "-includeall")
#SWIG_ADD_MODULE(pypxar python api/libpxar.i api/libpxar.cc)
#SWIG_LINK_LIBRARIES(pypxar ${PYTHON_LIBRARIES})

# Build testbed exe:
ADD_EXECUTABLE(testpxar "pxar/pxar.cpp" "pxar/pxar.h" )
TARGET_LINK_LIBRARIES(testpxar ${PROJECT_NAME})